# SNWFLK__DBT

./: .env.example  .gitignore  A_snowflake_config.py  README.md  diag_snowflake.py  pyproject.toml  streamlit_dashboard.py  streamlit_dashboard_local.py  tasks.py  test-connection.ipynb
.streamlit/: config.toml
SQL/: create_infrastructure.sql  create_role.sql  create_user.sql  grant_permissions.sql
SQL/Snowflake/: create_infrastructure.sql  create_role.sql  create_taxi_trips_table.sql  grant_permissions.sql  infer_parquet_schema.sql
SQL/dbt/: final_daily_summary.sql  final_hourly_patterns.sql  final_zone_analysis.sql  staging_clean_trips.sql
nyc_taxi_pipeline/: dbt_project.yml
nyc_taxi_pipeline/models/: sources.yml
nyc_taxi_pipeline/models/marts/: daily_summary.sql  hourly_patterns.sql  schema.yml  trip_categories.sql  zone_analysis.sql
nyc_taxi_pipeline/models/staging/: schema.yml  stg_yellow_taxi_trips.sql
reports/: nyc_taxi_dashboard.ipynb  raw_data_analysis.ipynb  raw_data_quality_report.md
scripts/: A_snowflake_config.py  B_load_data.py  B_load_local_parquet.py  C_data_analysis.py  D_transformations.py  E_generate_report.py  F_dbt_transformations.py
