[project]
name = "snwflk-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "snowflake>=1.8.0",
]
